--- a/package.json
+++ b/package.json
@@ -58,7 +58,9 @@
     "identity-obj-proxy": "^3.0.0",
     "import-inspector": "^2.0.0",
     "jest": "^22.4.3",
+    "json-loader": "^0.5.7",
     "react-hot-loader": "^4.0.1",
+    "react-router-redux": "^4.0.8",
     "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "webpack": "^4.5.0",
