--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "base-href-webpack-plugin": "^2.0.0",
     "prop-types": "^15.6.1",
     "react": "^16.3.1",
+    "react-date-range": "^0.9.4",
+    "react-datepicker": "^1.5.0",
     "react-dom": "^16.3.1",
     "react-helmet": "^5.2.0",
     "react-intl-universal": "^1.11.4",
